[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piva"
version = "2.3.2"
description = "PIVA - Photoemission Interface for Visualization and Analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wojtek Pudelko", email = "wojciech.pudelko@psi.ch" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "data_slicer>=1.0.2",
    "h5py>=3.11.0",
    "igor2>=0.5",
    "ipywidgets>=7.6.3",
    "julia>=0.5.6",
    "jupyterlab>=3.5",
    "jupyterthemes>=0.20.0",
    "matplotlib>=3.3.4",
    "numba>=0.57.0",
    "numpy<2.0.0",
    "openpyxl>=3.0.9",
    "pandas>=1.3.5",
    "pyqt5>=5.15.0",
    "pyqtgraph>=0.13.1",
    "scipy>=1.6.0",
    "tqdm>=4.56.0",
    "typing>=3.7",
]

[project.optional-dependencies]
test = ["pytest", "tox"]

[project.scripts]
db = "piva.main:db"

[project.urls]
Homepage = "https://github.com/pudeIko/piva.git"

[tool.hatch.version]
path = "piva/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/piva",
]
